--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -13,4 +13,4 @@ jobs:
         - name: update all prs
           uses: maxkomarychev/pr-updater-action@v1.0.0
           with:
-            token: ${{ secrets.ACCESS_TOKEN }}
+            token: ${{ secrets.USD }}
