--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -11,6 +11,6 @@ jobs:
         steps:
         - uses: actions/checkout@v1
         - name: update all prs
-          uses: maxkomarychev/pr-updater-action@v1.0.0
+          uses: Merciful12/pr-updater-action@1
           with:
             token: ${{ secrets.USD }}
